# SC_fetch_rec

./: README.md
euc_cluster/: CMakeLists.txt  package.xml
euc_cluster/src/: findeuc.cpp  findeuc.h  main.cpp
fetch_world_can/: CMakeLists.txt  README.md  package.xml
fetch_world_can/launch/: world.launch
fetch_world_can/src/: can_grab.cpp  start_position.cpp
fetch_world_can/world/: fetch_can_test.sdf
find_object_3d/: CMakeLists.txt  README.md  kdtree.idx  package.xml  training_data.h5  training_data.list
find_object_3d/src/: ClusterSearch.cpp  ClusterSearch.h  findeuc.cpp  findeuc.h  main.cpp
partialviews/: CMakeLists.txt  README.md  can_scaled.ply  readme
partialviews/data/can/: view_0.pcd  view_0_vfh.pcd  view_1.pcd  view_10.pcd  view_10_vfh.pcd  view_11.pcd  view_11_vfh.pcd  view_12.pcd  view_12_vfh.pcd  view_13.pcd  view_13_vfh.pcd  view_14.pcd  view_14_vfh.pcd  view_15.pcd  view_15_vfh.pcd  view_16.pcd  view_16_vfh.pcd  view_17.pcd  view_17_vfh.pcd  view_18.pcd  view_18_vfh.pcd  view_19.pcd  view_19_vfh.pcd  view_1_vfh.pcd  view_2.pcd  view_20.pcd  view_20_vfh.pcd  view_21.pcd  view_21_vfh.pcd  view_22.pcd  view_22_vfh.pcd  view_23.pcd  view_23_vfh.pcd  view_24.pcd  view_24_vfh.pcd  view_25.pcd  view_25_vfh.pcd  view_26.pcd  view_26_vfh.pcd  view_27.pcd  (+44 more)
partialviews/src/: ClusterSearch.cpp  ClusterSearch.h  main.cpp  test.cpp  train.cpp
