<?xml version="1.0"?>
<package format="2">
  <name>fetch_can</name>
  <version>0.0.0</version>
  <description>The fetch_can package</description>
  <maintainer email="mrhamfish@gmail.com">Hamish Shaw</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fetch_gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>tf2</build_depend>     
  <build_export_depend>fetch_gazebo</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>control_msgs</exec_depend>  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>fetch_gazebo</exec_depend>  
  <exec_depend>tf2</exec_depend> 

</package>
